lab1/Test/L1-A-6-10.output
Error Type B at Line 1
Error Type B at Line 6
Error Type A at Line 8
Error Type B at Line 10
Error Type B at Line 12
Error Type A at Line 12
