lab1/Test/L1-A-6-10.cmm
{
  struct iEyV41WZMZJKaUZg o8mlrgMHN7usyogEp [ 1127888994 
    ] [ 1563257585 ] = - ! p / mt3DrHw_SD4Zhdm * Fjy4Q8A_4I5CiEue4 
    - aaO5Im - u + rB + A6LerqJKHk8igKN + gglgiPK531K 
    && FUx9wAIxSEtrOyN8M && s3DY1neEGX && qGfuOeJds86Mjfwvp 
    && vnkGlGd6g8VsOuV && zA5u && ;
  struct ma {
    float #wWtI7TIYrCS0rsmGfXq ;
  }kxqVv9yY = - aPqxvTS_mAc2K35K_Lyp = GP0CrnFIRc8WO 
    , ;
};
!= $